--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.1
   provider: ^6.0.5
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
